fix portrait image position by setting photobox img to not visible and has a bg cover image instead

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -120,6 +120,16 @@ html {
 			overflow: hidden;
 			cursor: pointer;
 			position: relative;
+			
+			&.photo-popup {
+				background-size: cover;
+				background-position: center center;
+				background-repeat: no-repeat;
+
+				img {
+					display: none;
+				}
+			}
 
 			&:before {
 				content: " ";
